# PDF-Summarizer-End-to-End-Project

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
